Updated Horde to version 3.3.4, and all sub-applications to their latest versions.
Added a script installer for the eXtplorer AJAX file manager, version 2.0.1.
If Postfix relay domains are stored in a hash, update it instead of adding to relay_domains in /etc/postfix/main.cf.
Additional allowed MySQL client hosts are now included in backups.
Added a warning to the configuration check for systems behind a NAT gateway with an incorrectly configured DNS IP address.
Added options to the Module Config page for selecting which columns appear on the List Virtual Servers page, including new ones like the reseller, email address and extra admins.
The contents of mailboxes from Windows Plesk backups are now properly migrated.
Updated the French translation, thanks to Houssin Regis.
Added the modify-php-ini API command to update PHP variables in one or more virtual servers at once.
Added validation to prevent SSL from being enabled on a virtual server with an invalid certificate or key.
Resellers can be denied access to plans using the Edit Reseller page, or via the modify-reseller API call.
Extra administrators can now change their own passwords, via a new link on the left menu.
Added a DNS template option to control which A records are added to new domains.
Fixed a bug that prevented paths in php.ini from being updated when a domain is renamed or moved.
Added a button on the Edit Reseller page to clone his settings for a new reseller.
Removed the 'Bring up virtual interfaces?' module configuration option, as use of an existing interface can now be done on a per-domain basis.
---- Changes since 3.74 ----
Added a domain owner level capability restriction to prevent editing of external IP addresses.