@@ -1172,3 +1172,4 @@ Added a button on the Edit Reseller page to clone his settings for a new reselle
 Removed the 'Bring up virtual interfaces?' module configuration option, as use of an existing interface can now be done on a per-domain basis.
 ---- Changes since 3.74 ----
 Added a domain owner level capability restriction to prevent editing of external IP addresses.
+When a sub-server is converted to a top-level server, files from /etc/skel are copied into its home directory.
